# hugging-face-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/hf_bot/: __init__.py  __main__.py  app.py  config.py  content.py  formatter.py  handlers.py  intent.py  models.py  monitoring.py  state.py
src/hf_bot/clients/: __init__.py  base.py  huggingface.py  llm.py  search.py  web_reader.py
src/hf_bot/templates/prompts/: battle_evaluate.j2  battle_question.j2  hero_message.j2  model_summary.j2  system.j2  user_message.j2
